exports[`Spacer renders as excepted 1`] = `
<div
  style={
    Object {
      "paddingBottom": 48,
      "paddingTop": 48,
    }
  } />
`;

exports[`Spacer renders its children 1`] = `
<div
  style={
    Object {
      "paddingBottom": 48,
      "paddingTop": 48,
    }
  }>
  <p>
    some text
  </p>
</div>
`;
